--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd-mobile": "^5.28.1",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
