--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux-saga": "^1.2.2",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
